[package]
name = "bevy_mod_picking"
version = "0.18.2 "
authors = ["Aevyrie <aevyrie@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A modular picking plugin for Bevy."
repository = "https://github.com/aevyrie/bevy_mod_picking/"
keywords = ["gamedev", "picking", "bevy", "input", "eventlistener"]
categories = ["game-engines", "rendering"]
resolver = "2"
rust-version = "1.76.0"

[package.metadata.docs.rs]
all-features = true


[workspace]
members = ["crates/*", "backends/*"]

[dependencies]
bevy_app = { path = "../../bevyengine/bevy/crates/bevy_app", default-features = false }
bevy_core = { path = "../../bevyengine/bevy/crates/bevy_core", default-features = false }
bevy_color = { path = "../../bevyengine/bevy/crates/bevy_color", default-features = false, optional = true }
bevy_ecs = { path = "../../bevyengine/bevy/crates/bevy_ecs", default-features = false }
bevy_math = { path = "../../bevyengine/bevy/crates/bevy_math", default-features = false }
bevy_reflect = { path = "../../bevyengine/bevy/crates/bevy_reflect", default-features = false }
bevy_render = { path = "../../bevyengine/bevy/crates/bevy_render", default-features = false }
bevy_core_pipeline = { path = "../../bevyengine/bevy/crates/bevy_core_pipeline", optional = true, default-features = false }
bevy_text = { path = "../../bevyengine/bevy/crates/bevy_text", optional = true, default-features = false, features = [
    "default_font",
] }
bevy_ui = { path = "../../bevyengine/bevy/crates/bevy_ui", optional = true, default-features = false }
bevy_utils = { path = "../../bevyengine/bevy/crates/bevy_utils", default-features = false }
bevy_window = { path = "../../bevyengine/bevy/crates/bevy_window", default-features = false }

bevy_eventlistener = { path = "../bevy_eventlistener" }
bevy_egui = { optional = true, path = "../../mvlabat/bevy_egui" }
bevy_rapier3d = { optional = true, version = "0.25" }
bevy_xpbd_3d = { optional = true, version = "0.4" }

# Local
bevy_picking_core = { path = "crates/bevy_picking_core", version = "0.18" }
bevy_picking_input = { path = "crates/bevy_picking_input", version = "0.18" }
bevy_picking_selection = { optional = true, path = "crates/bevy_picking_selection", version = "0.18" }
bevy_picking_highlight = { optional = true, path = "crates/bevy_picking_highlight", version = "0.18" }
bevy_picking_raycast = { optional = true, path = "backends/bevy_picking_raycast", version = "0.18" }
bevy_picking_ui = { optional = true, path = "backends/bevy_picking_ui", version = "0.18" }
bevy_picking_rapier = { optional = true, path = "backends/bevy_picking_rapier", version = "0.18" }
bevy_picking_sprite = { optional = true, path = "backends/bevy_picking_sprite", version = "0.18" }
bevy_picking_egui = { optional = true, path = "backends/bevy_picking_egui", version = "0.18" }
bevy_picking_xpbd = { optional = true, path = "backends/bevy_picking_xpbd", version = "0.18" }

[dev-dependencies]
bevy = { path = "../../bevyengine/bevy", default-features = false, features = [
    "bevy_winit",
    "x11",
    "bevy_animation",
    "bevy_gltf",
    "bevy_scene",
    "bevy_ui",
    "bevy_gizmos",
    "png",
    "ktx2",
    "zstd",
    "tonemapping_luts",
] }

[features]
all = [
    "selection",
    "highlight",
    "debug",
    "backend_raycast",
    "backend_bevy_ui",
    "backend_rapier",
    "backend_sprite",
    "backend_egui",
    "backend_xpbd",
]
default = [
    "backend_raycast",
    "backend_bevy_ui",
    "backend_sprite",
    "debug",
    "selection",
    "highlight",
]
selection = [
    "bevy_picking_selection",
    "bevy_picking_input/selection",
    "bevy_picking_highlight/selection",
]
highlight = ["bevy_picking_highlight/pbr"]
debug = ["bevy_text", "bevy_ui/bevy_text", "bevy_core_pipeline", "bevy_color"]
backend_raycast = ["bevy_picking_raycast"]
backend_rapier = ["bevy_picking_rapier", "bevy_rapier3d"]
backend_sprite = ["bevy_picking_sprite", "bevy_picking_highlight/sprite"]
backend_bevy_ui = ["bevy_picking_ui", "bevy_ui"]
backend_egui = ["bevy_picking_egui", "bevy_egui"]
backend_xpbd = ["bevy_picking_xpbd", "bevy_xpbd_3d"]

[[example]]
name = "rapier"
path = "examples/rapier.rs"
required-features = ["backend_rapier"]

[[example]]
name = "egui"
path = "examples/egui.rs"
required-features = ["backend_egui"]

[[example]]
name = "event_listener"
path = "examples/event_listener.rs"
required-features = ["backend_egui"]

[[example]]
name = "multiple_windows"
path = "examples/multiple_windows.rs"
required-features = ["backend_egui"]

[[example]]
name = "virtual_pointer"
path = "examples/virtual_pointer.rs"
required-features = ["backend_egui"]

[[example]]
name = "split_screen"
path = "examples/split_screen.rs"
required-features = ["backend_egui"]

[[example]]
name = "xpbd"
path = "examples/xpbd.rs"
required-features = ["backend_xpbd"]
