[package]
name = "bevy_picking_xpbd"
version = "0.18.0"
edition = "2021"
authors = ["Aevyrie <aevyrie@gmail.com>, Affinator"]
license = "MIT OR Apache-2.0"
description = "A modular picking plugin for Bevy."
repository = "https://github.com/aevyrie/bevy_mod_picking/"
keywords = ["gamedev", "picking", "bevy", "eventlistener", "xpbd"]
categories = ["game-engines"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_app = { path = "../../../../bevyengine/bevy/crates/bevy_app", default-features = false }
bevy_ecs = { path = "../../../../bevyengine/bevy/crates/bevy_ecs", default-features = false }
bevy_math = { path = "../../../../bevyengine/bevy/crates/bevy_math", default-features = false }
bevy_reflect = { path = "../../../../bevyengine/bevy/crates/bevy_reflect", default-features = false }
bevy_render = { path = "../../../../bevyengine/bevy/crates/bevy_render", default-features = false }
bevy_transform = { path = "../../../../bevyengine/bevy/crates/bevy_transform", default-features = false }
bevy_utils = { path = "../../../../bevyengine/bevy/crates/bevy_utils", default-features = false }
bevy_window = { path = "../../../../bevyengine/bevy/crates/bevy_window", default-features = false }

bevy_xpbd_3d = "0.4"
# Local
bevy_picking_core = { path = "../../crates/bevy_picking_core", version = "0.18" }
