[package]
name = "bevy_picking_selection"
version = "0.18.0"
edition = "2021"
authors = ["Aevyrie <aevyrie@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A modular picking plugin for Bevy."
repository = "https://github.com/aevyrie/bevy_mod_picking/"
keywords = ["gamedev", "picking", "bevy", "input", "eventlistener"]
categories = ["game-engines"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_app = { path = "../../../../bevyengine/bevy/crates/bevy_app", default-features = false }
bevy_ecs = { path = "../../../../bevyengine/bevy/crates/bevy_ecs", default-features = false }
bevy_input = { path = "../../../../bevyengine/bevy/crates/bevy_input", default-features = false }
bevy_reflect = { path = "../../../../bevyengine/bevy/crates/bevy_reflect", default-features = false }
bevy_utils = { path = "../../../../bevyengine/bevy/crates/bevy_utils", default-features = false }

bevy_eventlistener = { path = "../../../bevy_eventlistener" }

bevy_picking_core = { path = "../bevy_picking_core", version = "0.18" }
